# option-trading-v2

backend /: docker-compose.yml
backend /bagpack-poller/: index.ts  package.json
backend /db-worker/: index.ts  package.json  prisma.ts  worker-init.ts
backend /engine/: index.ts
backend /http-server/: Dockerfile  agenticManager.ts  auth-middleware.ts  clearOtpCache.ts  index.ts  package.json  prompt.ts  redisSubscriber.ts
backend /http-server/helper/: rateLimit.ts  sendMail.ts
backend /http-server/prisma/: schema.prisma
backend /http-server/routes/: candles.ts  index.ts  tradeRoutes.ts
backend /http-server/types/: types.ts
backend /pubsub-be/: Dockerfile  README.md  index.ts
backend /rust-engine/: .gitignore  Cargo.toml
backend /rust-engine/src/: account.rs  main.rs  models.rs  order_consumer.rs
backend /strategy-matching/: main.py  requirement.txt
backend /strategy-matching/snapshots/: strategy_snapshot.json
workflow/backend/: index.ts  package.json
workflow/bagpack-poller/: Dockerfile  README.md  index.ts
workflow/bagpack-poller/calculator/: Anchor.toml
workflow/db-worker/: .env.example  emailTemplate.ts  index.ts  package.json  worker-init.ts
workflow/db-worker/prisma/: schema.prisma
workflow/engine/: .gitignore  index.ts  package.json  snapshot.json
workflow/http-server/: .env.example  .gitignore  auth-middleware.ts  index.ts  package.json  redisSubscriber.ts
workflow/http-server/helper/: sendMail.ts  validator.ts
workflow/pubsub-be/: index.ts  package.json
workflow/rust-engine/: .gitignore
(+18 files in other folders)
