[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
redis = { version= "0.32.5" , features=["tokio-comp"]}
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version="1.47.1" , features=["full"] }
tungstenite = { version = "0.27", features = ["url"] }
url = "2.5.7"
